# strawberry-django-dataloaders

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
strawberry_django_dataloaders/: dataloaders.py  exceptions.py  factories.py  fields.py  views.py
strawberry_django_dataloaders/core/: dataloader.py  factory.py
tests/: choices.py  conftest.py  django_settings.py  models.py  urls.py
tests/graphql/: dataloaders.py  schemas.py  types.py
tests/tests/: gql_queries.py  test_common.py
tests/tests/fixtures/: responses.py
tests/tests/fixtures/response_files/: fruits.json  fruits_empty.json
